--- a/01/P01a.ipynb
+++ b/01/P01a.ipynb
@@ -9,11 +9,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ee9c31fa",
    "metadata": {},
+   "source": [
+    "Hacer un programa que cargue una imagen y que obtenga y muestre el valor RGB de cada píxel de la imagen sobre el que esté el cursor del ratón."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c28e3db0",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "import cv2 as cv\n",
+    "\n",
+    "def mouse(event, x, y, flags, param):\n",
+    "    if event == cv.EVENT_MOUSEMOVE:\n",
+    "        b, g, r = img[y, x]\n",
+    "        img_copy = img.copy()\n",
+    "\n",
+    "        # Texto con borde\n",
+    "        cv.putText(img_copy, f\"R={r}\", (230, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                   0.7, (0, 0, 0), 4, cv.LINE_AA)\n",
+    "        cv.putText(img_copy, f\"G={g}\", (120, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                   0.7, (0, 0, 0), 4, cv.LINE_AA)\n",
+    "        cv.putText(img_copy, f\"B={b}\", (10, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                   0.7, (0, 0, 0), 4, cv.LINE_AA)\n",
+    "\n",
+    "        cv.putText(img_copy, f\"R={r}\", (230, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                   0.7, (0, 0, 255), 2, cv.LINE_AA)\n",
+    "        cv.putText(img_copy, f\"G={g}\", (120, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                   0.7, (0, 255, 0), 2, cv.LINE_AA)\n",
+    "        cv.putText(img_copy, f\"B={b}\", (10, 30), cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                   0.7, (255, 0, 0), 2, cv.LINE_AA)\n",
+    "\n",
+    "        cv.imshow('Imagen', img_copy)\n",
+    "\n",
+    "img = cv.imread('images/eii.png')\n",
+    "\n",
+    "cv.imshow('Imagen', img)\n",
+    "cv.setMouseCallback('Imagen', mouse)\n",
+    "\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f497e7b0",
+   "metadata": {},
    "source": []
   }
  ],
