--- a/01/P01b.ipynb
+++ b/01/P01b.ipynb
@@ -5,16 +5,252 @@
    "id": "91fbb9a6",
    "metadata": {},
    "source": [
-    "# Práctica 1b"
+    "# Práctica 1b\n",
+    "Hacer un programa para dibujar las siguientes primitivas con el ratón\n",
+    "- Líneas\n",
+    "- Rectángulos\n",
+    "- Círculos\n",
+    "- Especificar el color en RGB de las primitivas\n",
+    "- Definir el grosor de las líneas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ee9c31fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "👉 Usa los sliders para cambiar figura, color y grosor.\n",
+      "Figura: 0=Línea, 1=Rectángulo, 2=Círculo\n",
+      "ESC para salir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- Cargar imagen ---\n",
+    "file = 'images/eii.png'\n",
+    "image = cv.imread(file)\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
+    "\n",
+    "canvas = image.copy()\n",
+    "drawing = False\n",
+    "ix, iy = -1, -1\n",
+    "\n",
+    "# --- Ventana principal ---\n",
+    "cv.namedWindow(\"Editor\")\n",
+    "\n",
+    "# --- Funciones de trackbars ---\n",
+    "def nothing(x):\n",
+    "    pass\n",
+    "\n",
+    "# Trackbar para la figura (0=linea, 1=rect, 2=circle)\n",
+    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 2, nothing)\n",
+    "# Trackbars para el color BGR\n",
+    "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
+    "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
+    "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
+    "# Trackbar para grosor\n",
+    "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 10, nothing)\n",
+    "\n",
+    "# --- Función de dibujo con ratón ---\n",
+    "def draw(event, x, y, flags, param):\n",
+    "    global ix, iy, drawing, canvas, image\n",
+    "\n",
+    "    figura = cv.getTrackbarPos(\"Figura\", \"Editor\")\n",
+    "    b = cv.getTrackbarPos(\"B\", \"Editor\")\n",
+    "    g = cv.getTrackbarPos(\"G\", \"Editor\")\n",
+    "    r = cv.getTrackbarPos(\"R\", \"Editor\")\n",
+    "    color = (b, g, r)\n",
+    "    thickness = cv.getTrackbarPos(\"Grosor\", \"Editor\")\n",
+    "\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        drawing = True\n",
+    "        ix, iy = x, y\n",
+    "\n",
+    "    elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
+    "        temp = image.copy()\n",
+    "        if figura == 0:   # línea\n",
+    "            cv.line(temp, (ix, iy), (x, y), color, thickness)\n",
+    "        elif figura == 1: # rectángulo\n",
+    "            cv.rectangle(temp, (ix, iy), (x, y), color, thickness)\n",
+    "        elif figura == 2: # círculo\n",
+    "            radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "            cv.circle(temp, (ix, iy), radius, color, thickness)\n",
+    "        canvas = temp\n",
+    "\n",
+    "    elif event == cv.EVENT_LBUTTONUP:\n",
+    "        drawing = False\n",
+    "        if figura == 0:\n",
+    "            cv.line(image, (ix, iy), (x, y), color, thickness)\n",
+    "        elif figura == 1:\n",
+    "            cv.rectangle(image, (ix, iy), (x, y), color, thickness)\n",
+    "        elif figura == 2:\n",
+    "            radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "            cv.circle(image, (ix, iy), radius, color, thickness)\n",
+    "        canvas = image.copy()\n",
+    "\n",
+    "# Asociar el callback\n",
+    "cv.setMouseCallback(\"Editor\", draw)\n",
+    "\n",
+    "print(\"\\n👉 Usa los sliders para cambiar figura, color y grosor.\")\n",
+    "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo\")\n",
+    "print(\"ESC para salir.\")\n",
+    "\n",
+    "# Loop principal\n",
+    "while True:\n",
+    "    cv.imshow(\"Editor\", canvas)\n",
+    "    if cv.waitKey(1) & 0xFF == 27:  # ESC\n",
+    "        break\n",
+    "\n",
+    "cv.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cff16ab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "👉 Dibuja con el ratón en la ventana 'Editor'. Usa la ventana Tkinter para cambiar opciones.\n",
+      "Pulsa ESC para salir.\n",
+      "✔ Figura cambiada a line\n",
+      "✔ Figura cambiada a rect\n",
+      "✔ Grosor cambiado a 19\n",
+      "✔ Color cambiado a verde\n",
+      "✔ Color cambiado a azul\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "import threading\n",
+    "import tkinter as tk\n",
+    "from tkinter import simpledialog\n",
+    "\n",
+    "# --- Imagen base ---\n",
+    "file = \"images/eii.png\"\n",
+    "image = cv.imread(file)\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
+    "canvas = image.copy()\n",
+    "\n",
+    "# --- Variables globales ---\n",
+    "drawing = False\n",
+    "ix, iy = -1, -1\n",
+    "shape = \"line\"\n",
+    "color = (0, 0, 255)  # rojo\n",
+    "thickness = 2\n",
+    "\n",
+    "# --- Función de dibujo ---\n",
+    "def draw(event, x, y, flags, param):\n",
+    "    global ix, iy, drawing, canvas, image, shape, color, thickness\n",
+    "\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        drawing = True\n",
+    "        ix, iy = x, y\n",
+    "\n",
+    "    elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
+    "        temp = image.copy()\n",
+    "        if shape == \"line\":\n",
+    "            cv.line(temp, (ix, iy), (x, y), color, thickness)\n",
+    "        elif shape == \"rect\":\n",
+    "            cv.rectangle(temp, (ix, iy), (x, y), color, thickness)\n",
+    "        elif shape == \"circle\":\n",
+    "            radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "            cv.circle(temp, (ix, iy), radius, color, thickness)\n",
+    "        canvas = temp\n",
+    "\n",
+    "    elif event == cv.EVENT_LBUTTONUP:\n",
+    "        drawing = False\n",
+    "        if shape == \"line\":\n",
+    "            cv.line(image, (ix, iy), (x, y), color, thickness)\n",
+    "        elif shape == \"rect\":\n",
+    "            cv.rectangle(image, (ix, iy), (x, y), color, thickness)\n",
+    "        elif shape == \"circle\":\n",
+    "            radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "            cv.circle(image, (ix, iy), radius, color, thickness)\n",
+    "        canvas = image.copy()\n",
+    "\n",
+    "# --- Funciones de UI ---\n",
+    "def set_shape(s):\n",
+    "    global shape\n",
+    "    shape = s\n",
+    "    print(f\"✔ Figura cambiada a {s}\")\n",
+    "\n",
+    "def set_color(c):\n",
+    "    global color\n",
+    "    if c == \"rojo\":\n",
+    "        color = (0, 0, 255)\n",
+    "    elif c == \"verde\":\n",
+    "        color = (0, 255, 0)\n",
+    "    elif c == \"azul\":\n",
+    "        color = (255, 0, 0)\n",
+    "    print(f\"✔ Color cambiado a {c}\")\n",
+    "\n",
+    "def set_thickness():\n",
+    "    global thickness\n",
+    "    try:\n",
+    "        val = simpledialog.askinteger(\"Grosor\", \"Introduce grosor en píxeles:\", minvalue=1, maxvalue=20)\n",
+    "        if val:\n",
+    "            thickness = val\n",
+    "            print(f\"✔ Grosor cambiado a {thickness}\")\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "# --- Ventana Tkinter ---\n",
+    "def tk_ui():\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"Opciones de Dibujo\")\n",
+    "\n",
+    "    # Botones de figura\n",
+    "    tk.Label(root, text=\"Figura:\").pack()\n",
+    "    tk.Button(root, text=\"Línea\", command=lambda: set_shape(\"line\")).pack(fill=\"x\")\n",
+    "    tk.Button(root, text=\"Rectángulo\", command=lambda: set_shape(\"rect\")).pack(fill=\"x\")\n",
+    "    tk.Button(root, text=\"Círculo\", command=lambda: set_shape(\"circle\")).pack(fill=\"x\")\n",
+    "\n",
+    "    # Botones de color\n",
+    "    tk.Label(root, text=\"Color:\").pack()\n",
+    "    tk.Button(root, text=\"Rojo\", bg=\"red\", command=lambda: set_color(\"rojo\")).pack(fill=\"x\")\n",
+    "    tk.Button(root, text=\"Verde\", bg=\"green\", command=lambda: set_color(\"verde\")).pack(fill=\"x\")\n",
+    "    tk.Button(root, text=\"Azul\", bg=\"blue\", fg=\"white\", command=lambda: set_color(\"azul\")).pack(fill=\"x\")\n",
+    "\n",
+    "    # Grosor\n",
+    "    tk.Button(root, text=\"Cambiar grosor\", command=set_thickness).pack(fill=\"x\")\n",
+    "\n",
+    "    root.mainloop()\n",
+    "\n",
+    "# Lanzar Tkinter en un hilo paralelo\n",
+    "threading.Thread(target=tk_ui, daemon=True).start()\n",
+    "\n",
+    "# --- OpenCV ---\n",
+    "cv.namedWindow(\"Editor\")\n",
+    "cv.setMouseCallback(\"Editor\", draw)\n",
+    "\n",
+    "print(\"\\n👉 Dibuja con el ratón en la ventana 'Editor'. Usa la ventana Tkinter para cambiar opciones.\")\n",
+    "print(\"Pulsa ESC para salir.\")\n",
+    "\n",
+    "while True:\n",
+    "    cv.imshow(\"Editor\", canvas)\n",
+    "    if cv.waitKey(1) & 0xFF == 27:  # ESC\n",
+    "        break\n",
+    "\n",
+    "cv.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
@@ -33,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
