--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -13,8 +13,146 @@
    "execution_count": null,
    "id": "ee9c31fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "👉 Usa sliders para cambiar figura, color, grosor y relleno.\n",
+      "0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\n",
+      "En polilínea/polígono: clics izquierdos = puntos, clic derecho = cerrar figura.\n",
+      "ESC para salir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- Cargar imagen ---\n",
+    "file = 'images/eii.png'\n",
+    "image = cv.imread(file)\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
+    "\n",
+    "canvas = image.copy()\n",
+    "drawing = False\n",
+    "ix, iy = -1, -1\n",
+    "points = []  # para polilíneas y polígonos\n",
+    "\n",
+    "# --- Ventana principal ---\n",
+    "cv.namedWindow(\"Editor\", cv.WINDOW_AUTOSIZE)\n",
+    "\n",
+    "# --- Trackbars ---\n",
+    "def nothing(x): pass\n",
+    "\n",
+    "cv.createTrackbar(\"Figura\", \"Editor\", 0, 4, nothing)  # 0=linea,1=rect,2=circle,3=polyline,4=polygon\n",
+    "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
+    "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
+    "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
+    "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 20, nothing)\n",
+    "cv.createTrackbar(\"Relleno\", \"Editor\", 0, 1, nothing)\n",
+    "\n",
+    "def draw(event, x, y, flags, param):\n",
+    "    global ix, iy, drawing, canvas, image, points\n",
+    "\n",
+    "    figura = cv.getTrackbarPos(\"Figura\", \"Editor\")\n",
+    "    b = cv.getTrackbarPos(\"B\", \"Editor\")\n",
+    "    g = cv.getTrackbarPos(\"G\", \"Editor\")\n",
+    "    r = cv.getTrackbarPos(\"R\", \"Editor\")\n",
+    "    color = (b, g, r)\n",
+    "\n",
+    "    thickness = cv.getTrackbarPos(\"Grosor\", \"Editor\")\n",
+    "    relleno = cv.getTrackbarPos(\"Relleno\", \"Editor\")\n",
+    "\n",
+    "    # ⚠️ grosor -1 solo en figuras cerradas\n",
+    "    if figura not in [0, 3] and relleno == 1:\n",
+    "        thickness = -1\n",
+    "\n",
+    "    # --------- Dibujos normales ----------\n",
+    "    if figura in [0, 1, 2]:\n",
+    "        if event == cv.EVENT_LBUTTONDOWN:\n",
+    "            drawing = True\n",
+    "            ix, iy = x, y\n",
+    "\n",
+    "        elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
+    "            temp = image.copy()\n",
+    "            if figura == 0:   # línea\n",
+    "                cv.line(temp, (ix, iy), (x, y), color, thickness)\n",
+    "            elif figura == 1: # rectángulo\n",
+    "                cv.rectangle(temp, (ix, iy), (x, y), color, thickness)\n",
+    "            elif figura == 2: # círculo\n",
+    "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "                cv.circle(temp, (ix, iy), radius, color, thickness)\n",
+    "            canvas = temp\n",
+    "\n",
+    "        elif event == cv.EVENT_LBUTTONUP:\n",
+    "            drawing = False\n",
+    "            if figura == 0:\n",
+    "                cv.line(image, (ix, iy), (x, y), color, thickness)\n",
+    "            elif figura == 1:\n",
+    "                cv.rectangle(image, (ix, iy), (x, y), color, thickness)\n",
+    "            elif figura == 2:\n",
+    "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "                cv.circle(image, (ix, iy), radius, color, thickness)\n",
+    "            canvas = image.copy()\n",
+    "\n",
+    "    # --------- Polilínea / Polígono ----------\n",
+    "    elif figura in [3, 4]:\n",
+    "        if event == cv.EVENT_LBUTTONDOWN:\n",
+    "            points.append((x, y))\n",
+    "\n",
+    "        elif event == cv.EVENT_MOUSEMOVE and len(points) > 0:\n",
+    "            temp = image.copy()\n",
+    "            # usamos grosor positivo para vista previa\n",
+    "            preview_thickness = thickness if thickness > 0 else 2\n",
+    "\n",
+    "            # dibujar la polilínea fija con puntos confirmados\n",
+    "            cv.polylines(temp, [np.array(points)], False, color, preview_thickness)\n",
+    "            # goma elástica hasta el cursor\n",
+    "            cv.line(temp, points[-1], (x, y), color, preview_thickness)\n",
+    "            # dibujar puntos de control\n",
+    "            for p in points:\n",
+    "                cv.circle(temp, p, 4, (0, 0, 0), -1)\n",
+    "                cv.circle(temp, p, 2, (255, 255, 255), -1)\n",
+    "            canvas = temp\n",
+    "\n",
+    "\n",
+    "        elif event == cv.EVENT_RBUTTONDOWN and len(points) > 1:\n",
+    "            if figura == 3:  # polilínea abierta\n",
+    "                cv.polylines(image, [np.array(points)], False, color, max(1, thickness))\n",
+    "            elif figura == 4:  # polígono cerrado\n",
+    "                if thickness == -1:  # relleno\n",
+    "                    cv.fillPoly(image, [np.array(points)], color)\n",
+    "                else:\n",
+    "                    cv.polylines(image, [np.array(points)], True, color, thickness)\n",
+    "            canvas = image.copy()\n",
+    "            points = []  # reiniciar\n",
+    "\n",
+    "\n",
+    "# Asociar callback\n",
+    "cv.setMouseCallback(\"Editor\", draw)\n",
+    "\n",
+    "print(\"\\n👉 Usa sliders para cambiar figura, color, grosor y relleno.\")\n",
+    "print(\"0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\")\n",
+    "print(\"En polilínea/polígono: clics izquierdos = puntos, clic derecho = cerrar figura.\")\n",
+    "print(\"ESC para salir.\")\n",
+    "\n",
+    "height, width = canvas.shape[:2]\n",
+    "fourcc = cv.VideoWriter_fourcc(*'XVID')  # codec AVI\n",
+    "out = cv.VideoWriter('output/dibujo.avi', fourcc, 20.0, (width, height))\n",
+    "\n",
+    "# Loop principal\n",
+    "while True:\n",
+    "    cv.imshow(\"Editor\", canvas)\n",
+    "    out.write(canvas)  # <-- guardar frame\n",
+    "    if cv.waitKey(1) & 0xFF == 27:  # ESC\n",
+    "        break\n",
+    "\n",
+    "out.release()\n",
+    "cv.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
