--- a/02/Ejemplos_02.ipynb
+++ b/02/Ejemplos_02.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8b5c15b8-6591-4f10-9813-0275da2d52f0",
    "metadata": {
     "tags": []
@@ -184,7 +184,7 @@
     "\n",
     "cv.imshow('Traslacion', imageT)\n",
     "\n",
-    "# rotación\n",
+    "# euclídea: rotación y traslación\n",
     "a = np.pi/6\n",
     "T = np.float32(\n",
     "    [[np.cos(a),-np.sin(a),tx],\n",
@@ -192,7 +192,7 @@
     ")\n",
     "imageR = cv.warpAffine(image, T, size)\n",
     "\n",
-    "cv.imshow('Rotacion', imageR)\n",
+    "cv.imshow('Euclidea: rotacion y traslacion', imageR)\n",
     "\n",
     "# similaridad\n",
     "s=0.5\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a85d51bf-ed79-4dc6-bb05-8e8f35cab4bc",
    "metadata": {
     "tags": []
@@ -233,7 +233,7 @@
     "Tr = cv.getRotationMatrix2D(center, angle, scale)\n",
     "imageR = cv.warpAffine(image, Tr, size)\n",
     "\n",
-    "cv.imshow('Rotacion', imageR)\n",
+    "cv.imshow('Rotacion y escalado', imageR)\n",
     "\n",
     "# Calcular afinidad\n",
     "\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "63db07b4-211c-4335-b59b-be236470f2d0",
    "metadata": {
     "tags": []
@@ -292,8 +292,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03e03d30",
+   "metadata": {},
+   "source": [
+    "En el ejemplo anterior, se acumulan errores y la imagen pierde calidad.\n",
+    "\n",
+    "En el siguiente código, se soluciona el problema anterior mostrando la imagen original en cada rotación."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "9608078b-bd42-4c95-ab4c-b140d9865588",
    "metadata": {
     "tags": []
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "cb1d3c6a-a99a-4366-9afe-3cd83f973b0f",
    "metadata": {
     "tags": []
