--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -10,25 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee9c31fa",
+   "execution_count": 5,
+   "id": "cb1f0733",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "👉 Usa sliders para cambiar figura, color, grosor y relleno.\n",
-      "0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\n",
-      "En polilínea/polígono: clics izquierdos = puntos, clic derecho = cerrar figura.\n",
-      "ESC para salir.\n"
+      "Sliders: figura, color, grosor, relleno\n",
+      "0=Línea,1=Rect,2=Círculo,3=Polilínea,4=Polígono\n",
+      "Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\n",
+      "Tecla C = limpiar canvas\n",
+      "ESC = salir\n"
      ]
     }
    ],
    "source": [
     "import cv2 as cv\n",
     "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "os.makedirs(\"output\", exist_ok=True)\n",
     "\n",
     "# --- Cargar imagen ---\n",
     "file = 'images/eii.png'\n",
@@ -36,6 +39,8 @@
     "if image is None:\n",
     "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
     "\n",
+    "# Imagen original de referencia\n",
+    "original = image.copy()\n",
     "canvas = image.copy()\n",
     "drawing = False\n",
     "ix, iy = -1, -1\n",
@@ -66,27 +71,24 @@
     "    thickness = cv.getTrackbarPos(\"Grosor\", \"Editor\")\n",
     "    relleno = cv.getTrackbarPos(\"Relleno\", \"Editor\")\n",
     "\n",
-    "    # ⚠️ grosor -1 solo en figuras cerradas\n",
-    "    if figura not in [0, 3] and relleno == 1:\n",
+    "    if figura not in [0,3] and relleno == 1:\n",
     "        thickness = -1\n",
     "\n",
     "    # --------- Dibujos normales ----------\n",
-    "    if figura in [0, 1, 2]:\n",
+    "    if figura in [0,1,2]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
     "            drawing = True\n",
     "            ix, iy = x, y\n",
-    "\n",
     "        elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
     "            temp = image.copy()\n",
-    "            if figura == 0:   # línea\n",
+    "            if figura == 0:\n",
     "                cv.line(temp, (ix, iy), (x, y), color, thickness)\n",
-    "            elif figura == 1: # rectángulo\n",
+    "            elif figura == 1:\n",
     "                cv.rectangle(temp, (ix, iy), (x, y), color, thickness)\n",
-    "            elif figura == 2: # círculo\n",
-    "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "            elif figura == 2:\n",
+    "                radius = int(((x-ix)**2 + (y-iy)**2)**0.5)\n",
     "                cv.circle(temp, (ix, iy), radius, color, thickness)\n",
-    "            canvas = temp\n",
-    "\n",
+    "            canvas[:] = temp\n",
     "        elif event == cv.EVENT_LBUTTONUP:\n",
     "            drawing = False\n",
     "            if figura == 0:\n",
@@ -94,61 +96,61 @@
     "            elif figura == 1:\n",
     "                cv.rectangle(image, (ix, iy), (x, y), color, thickness)\n",
     "            elif figura == 2:\n",
-    "                radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
+    "                radius = int(((x-ix)**2 + (y-iy)**2)**0.5)\n",
     "                cv.circle(image, (ix, iy), radius, color, thickness)\n",
-    "            canvas = image.copy()\n",
+    "            canvas[:] = image.copy()\n",
     "\n",
     "    # --------- Polilínea / Polígono ----------\n",
-    "    elif figura in [3, 4]:\n",
+    "    elif figura in [3,4]:\n",
     "        if event == cv.EVENT_LBUTTONDOWN:\n",
-    "            points.append((x, y))\n",
-    "\n",
-    "        elif event == cv.EVENT_MOUSEMOVE and len(points) > 0:\n",
+    "            points.append((x,y))\n",
+    "        elif event == cv.EVENT_MOUSEMOVE and len(points)>0:\n",
     "            temp = image.copy()\n",
-    "            # usamos grosor positivo para vista previa\n",
-    "            preview_thickness = thickness if thickness > 0 else 2\n",
-    "\n",
-    "            # dibujar la polilínea fija con puntos confirmados\n",
+    "            preview_thickness = thickness if thickness>0 else 2\n",
     "            cv.polylines(temp, [np.array(points)], False, color, preview_thickness)\n",
-    "            # goma elástica hasta el cursor\n",
-    "            cv.line(temp, points[-1], (x, y), color, preview_thickness)\n",
-    "            # dibujar puntos de control\n",
+    "            cv.line(temp, points[-1], (x,y), color, preview_thickness)\n",
     "            for p in points:\n",
-    "                cv.circle(temp, p, 4, (0, 0, 0), -1)\n",
-    "                cv.circle(temp, p, 2, (255, 255, 255), -1)\n",
-    "            canvas = temp\n",
-    "\n",
-    "\n",
-    "        elif event == cv.EVENT_RBUTTONDOWN and len(points) > 1:\n",
-    "            if figura == 3:  # polilínea abierta\n",
-    "                cv.polylines(image, [np.array(points)], False, color, max(1, thickness))\n",
-    "            elif figura == 4:  # polígono cerrado\n",
-    "                if thickness == -1:  # relleno\n",
+    "                cv.circle(temp, p, 4, (0,0,0), -1)\n",
+    "                cv.circle(temp, p, 2, (255,255,255), -1)\n",
+    "            canvas[:] = temp\n",
+    "        elif event == cv.EVENT_RBUTTONDOWN and len(points)>1:\n",
+    "            if figura == 3:\n",
+    "                cv.polylines(image, [np.array(points)], False, color, max(1,thickness))\n",
+    "            elif figura == 4:\n",
+    "                if thickness == -1:\n",
     "                    cv.fillPoly(image, [np.array(points)], color)\n",
     "                else:\n",
     "                    cv.polylines(image, [np.array(points)], True, color, thickness)\n",
-    "            canvas = image.copy()\n",
-    "            points = []  # reiniciar\n",
+    "            points = []\n",
+    "            canvas[:] = image.copy()\n",
     "\n",
-    "\n",
-    "# Asociar callback\n",
+    "# --- Asociar callback ---\n",
     "cv.setMouseCallback(\"Editor\", draw)\n",
     "\n",
-    "print(\"\\n👉 Usa sliders para cambiar figura, color, grosor y relleno.\")\n",
-    "print(\"0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono\")\n",
-    "print(\"En polilínea/polígono: clics izquierdos = puntos, clic derecho = cerrar figura.\")\n",
-    "print(\"ESC para salir.\")\n",
-    "\n",
+    "# --- Preparar vídeo ---\n",
     "height, width = canvas.shape[:2]\n",
-    "fourcc = cv.VideoWriter_fourcc(*'XVID')  # codec AVI\n",
+    "fourcc = cv.VideoWriter_fourcc(*'XVID')\n",
     "out = cv.VideoWriter('output/dibujo.avi', fourcc, 20.0, (width, height))\n",
     "\n",
-    "# Loop principal\n",
+    "print(\"Sliders: figura, color, grosor, relleno\")\n",
+    "print(\"0=Línea,1=Rect,2=Círculo,3=Polilínea,4=Polígono\")\n",
+    "print(\"Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\")\n",
+    "print(\"Tecla C = limpiar canvas\")\n",
+    "print(\"ESC = salir\")\n",
+    "\n",
+    "# --- Loop principal ---\n",
     "while True:\n",
     "    cv.imshow(\"Editor\", canvas)\n",
-    "    out.write(canvas)  # <-- guardar frame\n",
-    "    if cv.waitKey(1) & 0xFF == 27:  # ESC\n",
+    "    out.write(canvas)\n",
+    "    key = cv.waitKey(1) & 0xFF\n",
+    "    if key == 27:  # ESC\n",
     "        break\n",
+    "    elif key == ord('c'):  # limpiar\n",
+    "        # Restaurar todo\n",
+    "        canvas[:] = original.copy()\n",
+    "        image[:] = original.copy()\n",
+    "        points = []\n",
+    "        drawing = False\n",
     "\n",
     "out.release()\n",
     "cv.destroyAllWindows()\n"
