Select rotation point with mouse

--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -18,11 +18,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a076477",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👉 Usa sliders o clic en la imagen para cambiar el punto de giro.\n",
+      "Pulsa ESC para salir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- Cargar imagen ---\n",
+    "image = cv.imread('images/cats.png')\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
+    "h, w = image.shape[:2]\n",
+    "\n",
+    "cv.namedWindow(\"Transformaciones\")\n",
+    "\n",
+    "# --- Variables de control ---\n",
+    "cx, cy = w//2, h//2  # punto de giro inicial\n",
+    "mouse_selected = False  # bandera para saber si el ratón seleccionó\n",
+    "\n",
+    "def nothing(x):\n",
+    "    pass\n",
+    "\n",
+    "# --- Trackbars ---\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
+    "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
+    "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
+    "\n",
+    "# --- Callback del ratón ---\n",
+    "def mouse(event, x, y, flags, param):\n",
+    "    global cx, cy, mouse_selected\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        cx, cy = x, y\n",
+    "        mouse_selected = True\n",
+    "\n",
+    "cv.setMouseCallback(\"Transformaciones\", mouse)\n",
+    "\n",
+    "print(\"👉 Usa sliders o clic en la imagen para cambiar el punto de giro.\")\n",
+    "print(\"Pulsa ESC para salir.\")\n",
+    "\n",
+    "while True:\n",
+    "    # --- Leer parámetros ---\n",
+    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
+    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
+    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
+    "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
+    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
+    "\n",
+    "    # Solo actualizar con trackbars si el ratón no ha seleccionado\n",
+    "    if not mouse_selected:\n",
+    "        cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
+    "        cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
+    "    else:\n",
+    "        # actualizar trackbars para reflejar la selección del ratón\n",
+    "        cv.setTrackbarPos(\"Cx\", \"Transformaciones\", cx)\n",
+    "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", cy)\n",
+    "        mouse_selected = False  # reset bandera\n",
+    "\n",
+    "    # --- Traslación ---\n",
+    "    T = np.float32([[1, 0, tx],\n",
+    "                    [0, 1, ty]])\n",
+    "    img_T = cv.warpAffine(image, T, (w, h))\n",
+    "\n",
+    "    # --- Rotación respecto a (cx, cy) ---\n",
+    "    M_translate1 = np.float32([[1, 0, -cx],\n",
+    "                               [0, 1, -cy]])\n",
+    "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
+    "    M_translate2 = np.float32([[1, 0, cx],\n",
+    "                               [0, 1, cy]])\n",
+    "\n",
+    "    M1 = np.vstack([M_translate1, [0, 0, 1]])\n",
+    "    M2 = np.vstack([M_rotate, [0, 0, 1]])\n",
+    "    M3 = np.vstack([M_translate2, [0, 0, 1]])\n",
+    "    M_rot = M3 @ M2 @ M1\n",
+    "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
+    "\n",
+    "    # --- Escalado ---\n",
+    "    if uniforme:\n",
+    "        s = sx\n",
+    "        S = np.float32([[s, 0, 0],\n",
+    "                        [0, s, 0]])\n",
+    "    else:\n",
+    "        S = np.float32([[sx, 0, 0],\n",
+    "                        [0, sy, 0]])\n",
+    "\n",
+    "    img_final = cv.warpAffine(img_R, S, (w, h))\n",
+    "\n",
+    "    # --- Dibujar puntos de referencia ---\n",
+    "    img_display = img_final.copy()\n",
+    "    cv.circle(img_display, (cx, cy), 5, (0, 0, 255), -1)\n",
+    "    cv.putText(img_display, f\"({cx},{cy})\", (cx + 10, cy - 10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
+    "\n",
+    "    tx_point, ty_point = w//2 + tx, h//2 + ty\n",
+    "    cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
+    "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point + 10, ty_point - 10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "\n",
+    "    cv.imshow(\"Transformaciones\", img_display)\n",
+    "\n",
+    "    if cv.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "\n",
+    "cv.destroyAllWindows()\n"
+   ]
   },
   {
    "cell_type": "markdown",
