--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5ab29067",
    "metadata": {},
    "outputs": [
@@ -203,6 +203,140 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "52e30f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👉 Trackbars o clic derecho para punto de giro, arrastra con izquierdo para mover imagen.\n",
+      "Pulsa ESC para salir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- Cargar imagen ---\n",
+    "image = cv.imread('images/cats.png')\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
+    "h, w = image.shape[:2]\n",
+    "\n",
+    "cv.namedWindow(\"Transformaciones\")\n",
+    "\n",
+    "# --- Variables de control ---\n",
+    "cx, cy = w//2, h//2        # punto de giro\n",
+    "mouse_selected = False       # bandera para cambio de punto de giro\n",
+    "dragging_img = False         # arrastrar imagen\n",
+    "start_x, start_y = 0, 0\n",
+    "tx_mouse, ty_mouse = 0, 0   # traslación por ratón\n",
+    "\n",
+    "def nothing(x):\n",
+    "    pass\n",
+    "\n",
+    "# --- Trackbars ---\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
+    "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
+    "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
+    "\n",
+    "# --- Callback del ratón ---\n",
+    "def mouse(event, x, y, flags, param):\n",
+    "    global cx, cy, mouse_selected\n",
+    "    global dragging_img, start_x, start_y, tx_mouse, ty_mouse\n",
+    "\n",
+    "    # Arrastrar imagen\n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        dragging_img = True\n",
+    "        start_x, start_y = x, y\n",
+    "    elif event == cv.EVENT_MOUSEMOVE and dragging_img:\n",
+    "        tx_mouse, ty_mouse = x - start_x, y - start_y\n",
+    "    elif event == cv.EVENT_LBUTTONUP:\n",
+    "        dragging_img = False\n",
+    "\n",
+    "    # Selección del punto de rotación\n",
+    "    if event == cv.EVENT_RBUTTONDOWN:\n",
+    "        cx, cy = x, y\n",
+    "        mouse_selected = True\n",
+    "\n",
+    "cv.setMouseCallback(\"Transformaciones\", mouse)\n",
+    "\n",
+    "print(\"👉 Trackbars o clic derecho para punto de giro, arrastra con izquierdo para mover imagen.\")\n",
+    "print(\"Pulsa ESC para salir.\")\n",
+    "\n",
+    "while True:\n",
+    "    # --- Leer parámetros ---\n",
+    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
+    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
+    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
+    "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
+    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
+    "\n",
+    "    # Actualizar punto de giro desde trackbars si no se seleccionó con ratón\n",
+    "    if not mouse_selected:\n",
+    "        cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
+    "        cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
+    "    else:\n",
+    "        # reflejar selección en trackbars\n",
+    "        cv.setTrackbarPos(\"Cx\", \"Transformaciones\", cx)\n",
+    "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", cy)\n",
+    "\n",
+    "    # --- Traslación total ---\n",
+    "    total_tx = tx + tx_mouse\n",
+    "    total_ty = ty + ty_mouse\n",
+    "    T = np.float32([[1, 0, total_tx],\n",
+    "                    [0, 1, total_ty]])\n",
+    "    img_T = cv.warpAffine(image, T, (w, h))\n",
+    "\n",
+    "    # --- Rotación ---\n",
+    "    M_translate1 = np.float32([[1, 0, -cx],\n",
+    "                               [0, 1, -cy]])\n",
+    "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
+    "    M_translate2 = np.float32([[1, 0, cx],\n",
+    "                               [0, 1, cy]])\n",
+    "    M1 = np.vstack([M_translate1, [0,0,1]])\n",
+    "    M2 = np.vstack([M_rotate, [0,0,1]])\n",
+    "    M3 = np.vstack([M_translate2, [0,0,1]])\n",
+    "    M_rot = M3 @ M2 @ M1\n",
+    "    img_R = cv.warpAffine(img_T, M_rot[:2], (w,h))\n",
+    "\n",
+    "    # --- Escalado ---\n",
+    "    if uniforme:\n",
+    "        s = sx\n",
+    "        S = np.float32([[s,0,0],[0,s,0]])\n",
+    "    else:\n",
+    "        S = np.float32([[sx,0,0],[0,sy,0]])\n",
+    "    img_final = cv.warpAffine(img_R, S, (w,h))\n",
+    "\n",
+    "    # --- Dibujar puntos ---\n",
+    "    img_display = img_final.copy()\n",
+    "    cv.circle(img_display, (cx, cy), 5, (0,0,255), -1)\n",
+    "    cv.putText(img_display, f\"({cx},{cy})\", (cx+10, cy-10), cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,0,255),2)\n",
+    "\n",
+    "    tx_point, ty_point = w//2 + total_tx, h//2 + total_ty\n",
+    "    cv.circle(img_display, (tx_point, ty_point), 5, (0,255,0), -1)\n",
+    "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point+10, ty_point-10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,255,0), 2)\n",
+    "\n",
+    "    cv.imshow(\"Transformaciones\", img_display)\n",
+    "\n",
+    "    if cv.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "\n",
+    "cv.destroyAllWindows()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3ddfd1ac",
    "metadata": {},
@@ -212,92 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "61bcc904",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Video Transformations (Interactive)\n",
-      "- Run: python3 video_transform.py\n",
-      "- Requirements: opencv-python, numpy\n",
-      "\n",
-      "Controles:\n",
-      "  1 - Modo Affine (trackbars: tx,ty,angle,scaleX,scaleY). Clic izq fija centro de rotación.\n",
-      "  2 - Modo Proyección (clic -> selecciona 4 src, luego 4 dst).\n",
-      "  3 - Modo Distorsión (trackbars k1,k2,p1,p2,k3).\n",
-      "  c - limpiar puntos de proyección\n",
-      "  q - salir\n",
-      "[Affine] Nuevo centro de rotación: (161, 128)\n",
-      "[Affine] Nuevo centro de rotación: (488, 280)\n",
-      "[Affine] Nuevo centro de rotación: (265, 357)\n",
-      "[Affine] Nuevo centro de rotación: (194, 215)\n",
-      "[Affine] Nuevo centro de rotación: (389, 213)\n",
-      "[Affine] Nuevo centro de rotación: (411, 221)\n",
-      "[Affine] Nuevo centro de rotación: (259, 221)\n",
-      "[Affine] Nuevo centro de rotación: (509, 296)\n",
-      "[Affine] Nuevo centro de rotación: (360, 239)\n",
-      "[Affine] Nuevo centro de rotación: (383, 181)\n",
-      "[Affine] Nuevo centro de rotación: (486, 245)\n",
-      "[Affine] Nuevo centro de rotación: (334, 306)\n",
-      "[Affine] Nuevo centro de rotación: (219, 261)\n",
-      "[Affine] Nuevo centro de rotación: (179, 197)\n",
-      "[Affine] Nuevo centro de rotación: (265, 135)\n",
-      "[Affine] Nuevo centro de rotación: (434, 172)\n",
-      "[Affine] Nuevo centro de rotación: (457, 249)\n",
-      "[Affine] Nuevo centro de rotación: (412, 283)\n",
-      "[Affine] Nuevo centro de rotación: (298, 275)\n",
-      "[Affine] Nuevo centro de rotación: (254, 247)\n",
-      "[Affine] Nuevo centro de rotación: (248, 171)\n",
-      "[Affine] Nuevo centro de rotación: (288, 143)\n",
-      "[Affine] Nuevo centro de rotación: (501, 133)\n",
-      "[Affine] Nuevo centro de rotación: (491, 226)\n",
-      "[Affine] Nuevo centro de rotación: (285, 209)\n",
-      "[Affine] Nuevo centro de rotación: (505, 171)\n",
-      "[Affine] Nuevo centro de rotación: (486, 264)\n",
-      "[Affine] Nuevo centro de rotación: (303, 275)\n",
-      "[Affine] Nuevo centro de rotación: (290, 128)\n",
-      "[Affine] Nuevo centro de rotación: (499, 223)\n",
-      "[Affine] Nuevo centro de rotación: (460, 242)\n",
-      "[Affine] Nuevo centro de rotación: (260, 212)\n",
-      "[Affine] Nuevo centro de rotación: (166, 185)\n",
-      "[Affine] Nuevo centro de rotación: (380, 232)\n",
-      "[Affine] Nuevo centro de rotación: (464, 216)\n",
-      "[Affine] Nuevo centro de rotación: (312, 137)\n",
-      "[Affine] Nuevo centro de rotación: (145, 233)\n",
-      "[Affine] Nuevo centro de rotación: (537, 256)\n",
-      "[Affine] Nuevo centro de rotación: (526, 174)\n",
-      "Modo: Affine\n",
-      "Modo: Projection (clics para seleccionar 4 src / 4 dst)\n",
-      "[Projection] src 1/4 -> (394, 188)\n",
-      "[Projection] src 2/4 -> (132, 179)\n",
-      "[Projection] src 3/4 -> (224, 396)\n",
-      "[Projection] src 4/4 -> (553, 338)\n",
-      "[Projection] dst 1/4 -> (562, 95)\n",
-      "[Projection] dst 2/4 -> (467, 463)\n",
-      "[Projection] dst 3/4 -> (55, 296)\n",
-      "[Projection] dst 4/4 -> (259, 91)\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "Modo: Projection (clics para seleccionar 4 src / 4 dst)\n",
-      "Modo: Projection (clics para seleccionar 4 src / 4 dst)\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "Modo: Projection (clics para seleccionar 4 src / 4 dst)\n",
-      "Modo: Distortion\n",
-      "Modo: Affine\n",
-      "[Affine] Nuevo centro de rotación: (353, 186)\n",
-      "[Affine] Nuevo centro de rotación: (114, 182)\n",
-      "[Affine] Nuevo centro de rotación: (506, 371)\n",
-      "[Affine] Nuevo centro de rotación: (525, 223)\n",
-      "Modo: Projection (clics para seleccionar 4 src / 4 dst)\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n",
-      "[Projection] Homografía calculada. Se aplicará a todos los frames.\n"
+     "ename": "RuntimeError",
+     "evalue": "No se pudo leer el primer frame.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 88\u001b[0m\n\u001b[0;32m     86\u001b[0m ret, frame \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret:\n\u001b[1;32m---> 88\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo se pudo leer el primer frame.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     89\u001b[0m h, w \u001b[38;5;241m=\u001b[39m frame\u001b[38;5;241m.\u001b[39mshape[:\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m     91\u001b[0m cv2\u001b[38;5;241m.\u001b[39mnamedWindow(WIN_NAME, cv2\u001b[38;5;241m.\u001b[39mWINDOW_AUTOSIZE)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: No se pudo leer el primer frame."
      ]
     }
    ],
